# Digital-Image-Processing

./: README.md
1.OpenCV/ShowImage/: ShowImage.pro
1.OpenCV/VideoPlay/: VideoPlay.pro  main.cpp
2.Image/2.2VisitImagePixel/: mainwindow.h
2.Image/2.3Distance/: mainwindow.cpp  mainwindow.h
2.Image/Distance/: mainwindow.ui  utility.h
2.Image/VisitImagePixel/: mainwindow.cpp  mainwindow.ui
3.ImageProcessing/ChangeContrastAndBright/: mainwindow.ui
3.ImageProcessing/ConvertColor/: mainwindow.h
3.ImageProcessing/DFT/: mainwindow.cpp  mainwindow.ui
3.ImageProcessing/GaussianBlur/: mainwindow.cpp  mainwindow.h  mainwindow.ui
3.ImageProcessing/GeometricTransformation/: mainwindow.ui
3.ImageProcessing/ImagePyramid/: mainwindow.cpp
3.ImageProcessing/ImageRegistration/: mainwindow.cpp
3.ImageProcessing/Interpolation/: mainwindow.h  mainwindow.ui
3.ImageProcessing/Sharpening/: mainwindow.ui
3.ImageProcessing/Smooth/: mainwindow.cpp
3.ImageProcessing/TemplateMatching/: mainwindow.ui
4.Segment/4.2RegionSplitAndMerge/: RegionSplitAndMerge.pro  mainwindow.cpp
4.Segment/RegionGrow/: mainwindow.cpp  mainwindow.h
4.Segment/RegionSplitAndMerge/: mainwindow.ui  splitandmerge.cpp
5.FeatureExtraction/GLCM/: mainwindow.cpp  mainwindow.h
5.FeatureExtraction/LBP/: LBP.pro  image.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
6.ImageRecognition/BackPropagationNet/: backpropagation.cpp  backpropagation.h  backpropagation2.cpp
6.ImageRecognition/BayesClassifier/: mainwindow.cpp  mainwindow.h
6.ImageRecognition/SVM/: mainwindow.h
7.ObjectTracking/TemplateMatchingTrack/: mainwindow.h  mainwindow.ui
EdgeThin/: LineWidthW.m  MySobel.m  OnePWidthW.m  SobelThinning.m  main.m  新建文本文档.ma
FeatureExtraction/GLCM/: GLCM.pro  mainwindow.ui
FeatureExtraction/HOG/: CMakeLists.txt  main.cpp
Image/NeighbourhoodOperations/: NeighbourhoodOperations.pro
Image/OpenImage/: mainwindow.cpp
Image/ROIExample/: mainwindow.cpp
ImageEnhance/AdaptiveAdjustment/: CMakeLists.txt  main.cpp
ImageEnhance/AdaptiveLogarithmicMapping/: CMakeLists.txt  main.cpp
ImageProcessing/BilateralFilter/: CMakeLists.txt  main.cpp
ImageProcessing/ChangeContrastAndBright/: mainwindow.cpp  mainwindow.h
ImageProcessing/DFT/: mainwindow.h
ImageProcessing/EqualizeHist/: mainwindow.ui
ImageProcessing/GaussianSmooth/: main.cpp
ImageProcessing/GeometricTransformation/: mainwindow.h
ImageProcessing/GuidedFilter/: CMakeLists.txt  fast-guided-filter-code-v1.rar  guided-filter-code-v1.rar  guidedFilter.cpp  guidedFilter.h  main.cpp
ImageProcessing/MeanShiftFilter/: CMakeLists.txt  main.cpp
ImageProcessing/NLMean/: CMakeLists.txt  main.cpp
ImageProcessing/RecursiveGaussian/: CMakeLists.txt  RecursiveGaussian.pro  main.cpp
ImageProcessing/Sharpening/: mainwindow.cpp
ImageProcessing/SideWindowFiltering/: CMakeLists.txt  box_filter.cpp  main.cpp  median_filter.cpp  side_window_box_filter.cpp  side_window_median_filter.cpp  side_window_median_filter.h
ImageProcessing/Smooth/: mainwindow.h  mainwindow.ui
ImageProcessing/TemplateMatching/: mainwindow.cpp
ImageRecognition/BackPropagationNet/: backpropagation2.h  main.cpp
ImageRecognition/BayesClassifier/: BayesClassifier.pro
ImageRecognition/SVM/: mainwindow.cpp  mainwindow.ui
ImageRestoration/Wiener/: CMakeLists.txt  main.cpp
MorphologicalImageProcessing/Convex/: main.cpp
MorphologicalImageProcessing/EdgeExtraction/: main.cpp
MorphologicalImageProcessing/ErodeDilate/: ErodeDilate.pro  main.cpp
MorphologicalImageProcessing/HitMissTransform/: HitMissTransform.pro  main.cpp
MorphologicalImageProcessing/LabelConnectedComponent/: main.cpp
MorphologicalImageProcessing/RegionFill/: RegionFill.pro  main.cpp
MorphologicalImageProcessing/Thining/: main.cpp
MorphologicalImageProcessing/TraceBoundary/: TraceBoundary.pro  main.cpp
ObjectTracking/Camshift/: CMakeLists.txt  main.cpp
ObjectTracking/MeanShiftTrack/: CMakeLists.txt  main.cpp
ObjectTracking/OpticalFlow/: CMakeLists.txt  main.cpp
ObjectTracking/TemplateMatchingTrack/: TemplateMatchingTrack.pro  mainwindow.cpp
Segment/CvSnakeImage/: CvSnakeImage.pro  main.cpp  snakeimage.cpp  snakeimage.h
Segment/GrabCut/: main.cpp
Segment/GraphCut/: graphcut.cpp  graphcut.h  main.cpp
Segment/Hough/: main.cpp
Segment/RegionGrow/: CMakeLists.txt  main.cpp
Segment/watershed/: CMakeLists.txt  main.cpp
part1/: 1.4highgui模块介绍.md
(+88 files in other folders)
